--- a/strings/languages/en/strings.json
+++ b/strings/languages/en/strings.json
@@ -255,6 +255,8 @@
     "bySource": "By source",
     "chapterSort": "Default chapter sort",
     "desc": "(Descending)",
+    "disableLoadingAnimations": "Disable loading animations",
+    "disableLoadingAnimationsDesc": "May improve performance on slower devices",
     "disableHapticFeedback": "Disable haptic feedback",
     "displayMode": "Display Mode",
     "downloadNewChapters": "Download new chapters",
